@@ -1,3 +1,6 @@
+2010-08-23  Sarlmol Apple  <sarlmolapple@gmail.com>
+
+	* src/ol_player_guayadeque02.c : ADD: Guayadeque0.2.5 support
 2010-07-10  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_player_muine.c : ADD: Muine support
